# VEBB-AI

./: .env.example  .gitignore  DEPLOYMENT.md  HANDOFF_PHASE_116.md  README.md  adaptive_thresholds.py  backtester.py  chart_memory.py  cold_start_manager.py  control_bridge.py  data_stream.py  delta_threshold.py  deploy.sh  dynamic_tp_sl.py  exchange_client.py  fetch_data.py  gemini_analyst.py  liquidation_stream.py  liquidity_magnet.py  list_models.py  main.py  main_instance.py  market_context.py  microstructure.py  multi_timeframe.py  order_book.py  order_flow.py  position_manager.py  recalibrate.py  regime_detector.py  requirements.txt  semantic_cache.py  sentinel_detector.py  setup_cron.sh  shm_bridge.py  test_avg_price_fallback.py  test_binance.py  test_gemini.py  test_high_speed_stream.py  test_order_book_attr.py  (+13 more)
Deep Research/: AI Trading Strategy Research.md  Adaptive Trading Execution Models.md  Algorithmic Supply-Demand Zone Mapping.md  Algorithmic VWMA_VWAP Integration Research.md  C++20_FPGA Deterministic Execution Blueprint.md  Dynamic Confidence Scaling Framework.md  Dynamic Delta Threshold for Trading Bot.md  Dynamic Divergence Index Guard Proposal.md  Dynamic Flow Deviation Guard Design.md  Dynamic Hawkes Intensity Floors Proposal.md  (+26 more)
Deep Research Prompts/: global_indicators_prompt.md  multi_exchange_prompt.md  phase_109_self_calibrating_thresholds.md  phase_78_architecture_critique.md  phase_79_architectural_ceiling.md  phase_81_hardware_determinism.md  vwma_prompt.md
vebb-ingest/: Cargo.toml
vebb-ingest/src/: main.rs  shared_mem.rs
(+8 files in other folders)
